Pulling all active RFQs and offers before shutdown